# Review-Collector-Python

./: README.md  consts.py  main.py  main_ms2.py  main_ms3.py  pyproject.toml  requirements.txt  utils.py
json/: albumHrefs.json  v_albums.json  x_albums.json  y_albums.json  z_albums.json
milestones/: ms1.py  ms2.py  ms3.py
ms1/: main_ms1.py
music/: Album.py  Genre.py
product/: Album.py
review/: Review.py
reviews/: Review.py
