[tool.poetry]
name = "review-collector-python"
version = "0.1.0"
description = ""
authors = ["Enda-Monks <enda.monks@gmail.com>"]
readme = "README.md"
packages = [{include = "review_collector_python"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
marshmallow = "^3.17.1"
lxml = "^4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
